--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -841,6 +841,14 @@ Those two variables store most options that you have selected when configuring t
 
 Remember, however, that the Behavioral Trigger Content Block use classes visible in the `markupFragments` in the CSS. Changes might break the styling.
 
+:::note You Should Know
+
+Current version of Behavioral Trigger Content Block is not rendering correctly on Yahoo, AOL and Windows Outlook. Learn more [here](../../../ideas#behavioral-trigger-content-block-rendering-on-yahoo-aol-windows-outlook).
+
+Fix it by changing `rem` units in `markupFragments` to `px` ones.
+
+:::
+
 Later there are also two other settings-related lines:
 
 ```js
