Internal link fix for SQL Value Length article

--- a/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
@@ -177,7 +177,7 @@ Remember that if you implement this option, it will impact the output length in 
 
 ## Fully-fledged Long Term Solution
 
-After applying both of the above options to the [Basic SQL Snippet](basic-long-term-solution), it looks like this:
+After applying both of the above options to the [Basic SQL Snippet](#basic-long-term-solution), it looks like this:
 
 ```sql
 SELECT
